@@ -1,3 +1,12 @@
+2005-08-27  Jb Evain  <jbevain@gmail.com>
+
+	* Mono.Cecil.Implem/FieldDefinition.cs:
+		Correct a bug that causes null ref due to
+		the new api.
+	* Mono.Cecil.Signatures/SignatureWriter.cs:
+		Implement a very little more custom attributes
+		writing.
+
 2005-08-26  Jb Evain  <jbevain@gmail.com>
 
 	* Mono.Cecil/IMemberReferenceCollection.cs
